1. Enable UMA histogram logger for low memory kill events in ArcMetricsService. - Arc.LowMemoryKiller.Count: cumulative count of #kills. - Arc.LowMemoryKiller.FreedSize: Memory freed by each kill. - Arc.LowMemoryKiller.TimeDelta: Elapsed time since last kill.

2. renamed UMA histogram ArcRuntime.* => Arc.*
3. Move ArcLowMemoryMonitor to components/ for better DEPS management.

BUG=597899
TEST="Tested on minnie"

Review URL: https://codereview.chromium.org/1828533002

Cr-Commit-Position: refs/heads/master@{#383482}

Former-commit-id: b238d39b1f0e3dd475a91f5ac04534a084e12282