components/arc/metrics/arc_metrics_service.h
@@ -12,6 +12,7 @@
 #include "components/arc/arc_bridge_service.h"
 #include "components/arc/arc_service.h"
 #include "components/arc/common/arc_bridge.mojom.h"
+#include "components/arc/metrics/arc_low_memory_killer_monitor.h"
 
 namespace arc {
 
@@ -33,6 +34,8 @@ class ArcMetricsService : public ArcService,
 
   base::ThreadChecker thread_checker_;
   base::RepeatingTimer timer_;
+
+  ArcLowMemoryKillerMonitor low_memory_killer_minotor_;
 
   // Always keep this the last member of this class to make sure it's the
   // first thing to be destructed.
