chrome/chrome_browser_chromeos.gypi
@@ -69,8 +69,6 @@
         'browser/chromeos/arc/arc_process_service.h',
         'browser/chromeos/arc/settings_bridge.cc',
         'browser/chromeos/arc/settings_bridge.h',
-        'browser/chromeos/arc/arc_low_memory_killer_monitor.h',
-        'browser/chromeos/arc/arc_low_memory_killer_monitor.cc',
         'browser/chromeos/arc/arc_optin_uma.cc',
         'browser/chromeos/arc/arc_optin_uma.h',
         'browser/chromeos/attestation/attestation_ca_client.cc',
